--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
+        "ext-json": "*",
+        "php": ">=7.1.0",
         "guzzlehttp/guzzle": "^6.2"
     },
     "autoload": {
